--- a/serve/index.html
+++ b/serve/index.html
@@ -30,7 +30,7 @@ The first time you load this page the model needs to load, which might take
 some time. It may be upward of 1 MB.
     </div>
     <form action="javascript:init()">
-        <input type="text" name="rec_name">
+        <input type="text" name="rec_name" id="rec_name">
         <input type="submit" value="Create New Recipe" name="submit_button">
     </form>
     <div id="micro_out_div"></div>
