--- a/serve/index.html
+++ b/serve/index.html
@@ -31,11 +31,10 @@ some time. It may be upward of 1 MB.
     </div>
     <form action="javascript:init()">
         <div>Temperature:
-Higher values result in more "creative" recipes, lower values can make more sense
-
-        </div>
+Higher values result in more "creative" recipes, lower values can make more sense</div>
         <input type="range" name="temp" id="temp" max="2.0" min="0.5" 
         defaultValue="1.0" step=0.01>
+        <br>
         <input type="text" name="rec_name" id="rec_name">
         <input type="submit" value="Create New Recipe" name="submit_button">
     </form>
